# inf301-app3

./: .gitignore  LICENSE  LISEZMOI.txt  Makefile  acte1  acte1.c  acte2  acte2.c  acte3  acte5.c  arbres.c  arbres.h  arbresphylo.c  arbresphylo.h  common_tests.c  common_tests.h  dot.c  dot.h  listes.c  listes.h  main  main.c  recherche-appolab.c
.github/workflows/: c-cpp.yml
appolab/: Cargo.toml  README.md  ents.test
appolab/src/: ents.rs  hero.rs  main.rs  node.rs
tests_acte5/: acte5_test1.test  acte5_test4.test
